--- a/InciOneSoft.Api/appsettings.json
+++ b/InciOneSoft.Api/appsettings.json
@@ -9,6 +9,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "InciOneSoftConnectionString": "server=localhost;database=InciOneSoft.DB;user id=sa;password=admin"
+    "InciOneSoftConnectionString": "server=localhost;database=TempTest.DB;user id=sa;password=admin"
   }
 }
